k8s-manifests/overlays/staging/superapp/qa-utility/patch/dev-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-utility
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: qa-utility
        image: harbor.cbe.com.et/cbe-superapp/qa-utility-dev:latest
        imagePullPolicy: Always
